# mapexploc

./: .gitignore  .pre-commit-config.yaml  README.md  REQUIREMENTS.md  environment.yml  exploratory.ipynb  features.ipynb  knn.ipynb  mkdocs.yml  preprocessing.ipynb  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  rf.ipynb  shap.ipynb  train.ipynb  ybs.ipynb
.github/workflows/: ci.yml
archive/: train_v1.ipynb
config/: default.yml
docs/: adapter-guide.md  api.md  explainer-guide.md  index.md  migration.md  quickstart.md  reporting-schema.md  ui.md
docs/tutorials/: exploratory.md  knn.md  preprocessing.md  rf.md  shap.md  ybs.md
examples/data/: example_sequences.csv
notebooks/: exploratory.ipynb  features.ipynb  knn.ipynb  preprocessing.ipynb  rf.ipynb  shap.ipynb  train_v1.ipynb  ybs.ipynb
results/csv/: class_balance.csv  clusters_vs_localization.csv  knn_benchmark_ks.csv  knn_classification_report.csv  knn_confusion_matrix.csv  knn_cv_results.csv  knn_roc_curve.csv  knn_roc_curve_Cell Surface.csv  knn_roc_curve_Cytoplasm.csv  knn_roc_curve_Endoplasmic Reticulum.csv  knn_roc_curve_Golgi Apparatus.csv  knn_roc_curve_Lysosome.csv  knn_roc_curve_Membrane.csv  knn_roc_curve_Mitochondrion.csv  knn_roc_curve_Nucleus.csv  knn_roc_curve_Other.csv  knn_roc_curve_Periplasm.csv  knn_roc_curve_Peroxisome.csv  knn_roc_curve_Plastid.csv  knn_roc_curve_Secreted.csv  knn_roc_curve_Vacuole.csv  knn_roc_curve_Virion.csv  knn_test_classification_report.csv  rf_brier_scores.csv  rf_confusion_matrix.csv  rf_cv_results.csv  rf_feature_importances.csv  rf_pr_avg_precision.csv  rf_roc_auc_values.csv
results/figures/: .gitignore
src/: features.py
src/explocal/: __init__.py  cli.py  config.py  data.py  features.py  preprocessing.py
src/explocal/explainability/: __init__.py  shap.py
src/explocal/models/: __init__.py  knn.py  rf.py
src/mapexploc/: __init__.py  adapter.py  api.py  cli.py  config.py  data.py  evaluation.py  features.py  preprocessing.py  report.py
src/mapexploc/explainers/: __init__.py  shap.py
src/mapexploc/models/: __init__.py  knn.py  rf.py
tests/: test_cli.py  test_pipeline.py
ui/: README.md  package.json
ui/src/: App.jsx
ui/src/components/: Beeswarm.jsx  Dependence.jsx  ForcePlot.jsx  InteractionHeatmap.jsx  MotifOverlay.jsx
