[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-exploc"
version = "0.1.0"
description = "Explainable Subcellular Localization Predictor"
readme = "README.md"
authors = [{name = "Explocal Developers", email = "dev@example.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "pydantic>=1.10",
  "pyyaml>=6.0",
  "typer>=0.9",
  "shap>=0.41.0",
  "fastapi>=0.68.0",
  "uvicorn>=0.15.0",
  "imbalanced-learn>=0.9.0",
  "biopython>=1.79",
  "joblib>=1.0.0",
]

[project.optional-dependencies]
torch = ["torch"]
esm = ["esm"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
dev = [
  "pytest>=6.0",
  "black>=22.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
  "pre-commit>=2.20",
  "types-pyyaml",
]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.0.0",
  "ipywidgets>=7.6.0",
  "matplotlib>=3.5.0",
  "seaborn>=0.11.0",
  "umap-learn>=0.5.0",
]
bio = [
  # biopython is now included in main dependencies
]

[project.scripts]
mapexploc = "mapexploc.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
pretty = true
packages = ["mapexploc"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
